projeto-itau-agentforce/force-app/main/default/objects/Case/fields/Aprovacao_Gestor__c.field-meta.xml
<CustomField>
    <fullName>Aprovacao_Gestor__c</fullName>
    <label>Aprovacao do Gestor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>