projeto-itau-agentforce/force-app/main/default/objects/Case/fields/Data_Inicio_Ferias__c.field-meta.xml
<CustomField>
    <fullName>Data_Inicio_Ferias__c</fullName>
    <label>Data Inicio das Ferias</label>
    <type>Date</type>
</CustomField>