projeto-itau-agentforce/force-app/main/default/objects/Case/fields/Data_Notificacao_Lembrete__c.field-meta.xml
<CustomField>
    <fullName>Data_Notificacao_Lembrete__c</fullName>
    <formula>Data_Inicio_Ferias__c - 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Notificacao Lembrete</label>
    <type>Date</type>
</CustomField>