projeto-itau-agentforce/force-app/main/default/objects/Case/fields/Data_Retorno_Ferias__c.field-meta.xml
<CustomField>
    <fullName>Data_Retorno_Ferias__c</fullName>
    <label>Data Retorno das Ferias</label>
    <type>Date</type>
</CustomField>