projeto-itau-agentforce/force-app/main/default/objects/Case/fields/Dias_Abono__c.field-meta.xml
<CustomField>
    <fullName>Dias_Abono__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dias de Abono</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>