projeto-itau-agentforce/force-app/main/default/objects/Case/fields/Gestor__c.field-meta.xml
<CustomField>
    <fullName>Gestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestor Aprovador</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Pedidos de Ferias para Aprovacao</relationshipLabel>
    <relationshipName>Pedidos_Ferias_Aprovacao</relationshipName>
    <type>Lookup</type>
</CustomField>