projeto-itau-agentforce/force-app/main/default/objects/Case/fields/Quantidade_Dias__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Dias__c</fullName>
    <formula>IF(
  OR(ISBLANK(Data_Inicio_Ferias__c), ISBLANK(Data_Retorno_Ferias__c)),
  0,
  Data_Retorno_Ferias__c - Data_Inicio_Ferias__c + 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade de Dias</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>