projeto-itau-agentforce/force-app/main/default/objects/Case/fields/Saldo_Ferias_Ref__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Ferias_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Saldo de Ferias</label>
    <referenceTo>Saldo_Ferias__c</referenceTo>
    <relationshipLabel>Pedidos de Ferias</relationshipLabel>
    <relationshipName>Pedidos_Ferias</relationshipName>
    <type>Lookup</type>
</CustomField>