projeto-itau-agentforce/force-app/main/default/objects/Case/fields/Vender_Abono__c.field-meta.xml
<CustomField>
    <fullName>Vender_Abono__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vender Abono</label>
    <type>Checkbox</type>
</CustomField>