projeto-itau-agentforce/force-app/main/default/objects/Case/recordTypes/Pedido_Ferias.recordType-meta.xml
<RecordType>
    <fullName>Pedido_Ferias</fullName>
    <active>true</active>
    <businessProcess>Pedido_Ferias_Process</businessProcess>
    <description>Pedido formal de ferias submetido pelo colaborador via I-Connecta.</description>
    <label>Pedido de Ferias</label>
</RecordType>