projeto-itau-agentforce/force-app/main/default/objects/Case/listViews/Meus_Pedidos_Ferias.listView-meta.xml
<ListView>
    <fullName>Meus_Pedidos_Ferias</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Data_Inicio_Ferias__c</columns>
    <columns>Data_Retorno_Ferias__c</columns>
    <columns>Quantidade_Dias__c</columns>
    <columns>Aprovacao_Gestor__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Pedido de Ferias</value>
    </filters>
    <label>Meus Pedidos de Ferias</label>
</ListView>